Slim down implementation